Course Select Screen completed with Dynamic Buttons
Implemented dynamic buttons of Course Select screen.

--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/CourseSelectScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/CourseSelectScreen.fxml
@@ -57,6 +57,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ComboBox>
+                  <Button fx:id="refreshGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#refreshGridButtons" prefHeight="30.0" prefWidth="60.0" text="Refresh" />
                   <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
                   <ImageView fx:id="logo" fitHeight="60.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -83,107 +84,13 @@
                         <GridPane fx:id="gridPane" alignment="CENTER" hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="400.0" minWidth="900.0" prefHeight="400.0" prefWidth="900.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <padding>
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                            </padding>
-                           <children>
-                              <Button fx:id="courseID1" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="courseID2" alignment="CENTER" layoutX="70.0" layoutY="48.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 2" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="courseID3" alignment="CENTER" layoutX="33.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 3" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="courseID4" alignment="CENTER" layoutX="480.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 4" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="courseID5" alignment="CENTER" layoutX="705.0" layoutY="29.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 5" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="courseID6" alignment="CENTER" layoutX="30.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 6" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="courseID7" alignment="CENTER" layoutX="255.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 7" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                              <Button fx:id="courseID8" alignment="CENTER" layoutX="480.0" layoutY="146.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#sendToBatchSelectionScreen" prefHeight="150.0" prefWidth="200.0" text="Course 8" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="NEVER">
-                                 <GridPane.margin>
-                                    <Insets />
-                                 </GridPane.margin>
-                                 <padding>
-                                    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                 </padding>
-                                 <font>
-                                    <Font name="Calibri Bold Italic" size="34.0" />
-                                 </font>
-                              </Button>
-                           </children>
                         </GridPane>
                      </children>
                   </AnchorPane>
