--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/UpdateForm.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/UpdateForm.fxml
@@ -2,10 +2,10 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchScheduler.fxmlsControllers.UpdateFormController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchScheduler.fxmlsControllers.UpdateFormController">
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
          <BorderPane.margin>
@@ -149,7 +149,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <RadioButton fx:id="activeStatus" layoutX="229.0" layoutY="704.0" mnemonicParsing="false" onAction="#validateActiveStatus" text="yes" />
+                  <CheckBox fx:id="activeStatus" layoutX="227.0" layoutY="703.0" mnemonicParsing="false" onAction="#validateActiveStatus" text="Active" />
                </children>
             </AnchorPane>
          </content>
