--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
@@ -70,11 +70,11 @@
       </AnchorPane>
    </top>
    <center>
-      <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.482438433589019" prefHeight="160.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
         <items>
           <AnchorPane maxWidth="1000.0" minHeight="615.0" minWidth="475.0" prefHeight="615.0" prefWidth="475.0">
                <children>
-                  <GridPane hgap="10.0" prefHeight="623.0" prefWidth="294.0" style="-fx-background-color: purple;" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane hgap="10.0" prefHeight="616.0" prefWidth="475.2" style="-fx-background-color: purple;" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -85,6 +85,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Lectures :" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
@@ -92,7 +93,7 @@
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingTotalLectures" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <TextField fx:id="progressTrackingTotalTopics" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="16.0" />
                            </font></TextField>
@@ -105,33 +106,43 @@
                            <font>
                               <Font name="Calibri Bold" size="16.0" />
                            </font></TextField>
-                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Elapsed Duration :" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Total Lectures :" GridPane.halignment="LEFT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingElapsedDuration" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                        <TextField fx:id="progressTrackingTotalLectures" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="16.0" />
                            </font></TextField>
-                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Total topics :" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="No. Of Topics Covered:" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingTotalTopics" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                        <TextField fx:id="progressTrackingTopicsCovered" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="16.0" />
                            </font></TextField>
-                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Remaining Topics :" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Remaining Lectures :" GridPane.halignment="LEFT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                            <font>
                               <Font name="Calibri Bold" size="24.0" />
                            </font>
                         </Text>
-                        <TextField fx:id="progressTrackingRemainingTopics" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <TextField fx:id="progressTrackingRemainingLectures" editable="false" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                            <font>
                               <Font name="Calibri Bold" size="16.0" />
                            </font></TextField>
+                        <TextField fx:id="progressTrackingElapsedDuration" editable="false" layoutX="252.0" layoutY="353.0" prefHeight="30.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="Calibri Bold" size="16.0" />
+                           </font>
+                        </TextField>
+                        <Text fill="WHITE" layoutX="20.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Elapsed Duration :" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="Calibri Bold" size="24.0" />
+                           </font>
+                        </Text>
                      </children>
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -165,7 +176,7 @@
                         </ScrollPane>
                         <PieChart fx:id="processTrackingPieChart" minHeight="-Infinity" minWidth="-Infinity" prefHeight="295.0" prefWidth="499.0" title="Syllabus" VBox.vgrow="ALWAYS">
                            <effect>
-                              <ColorAdjust brightness="1.0" contrast="1.0" />
+                              <ColorAdjust brightness="0.02" contrast="0.25" />
                            </effect></PieChart>
                      </children>
                   </VBox>
