--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchLauncher.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchLauncher.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -39,7 +38,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Batch Number">
+                  <Label text="Batch Name">
                      <padding>
                         <Insets left="10.0" />
                      </padding></Label>
@@ -67,23 +66,13 @@
                      <padding>
                         <Insets left="10.0" />
                      </padding></Label>
-                  <TextField fx:id="batchNumber" GridPane.columnIndex="1" />
-                  <TextField fx:id="lectureNumber" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="totalNumberOfLecture" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="facultyId" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="lectureDuration" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <DatePicker fx:id="beginDate" onAction="#beginDateFrame" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <DatePicker fx:id="endDate" onAction="#endDateFrame" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <CheckBox fx:id="morningBox" mnemonicParsing="false" text="Morning" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <CheckBox fx:id="eveningBox" mnemonicParsing="false" text="Evening" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                     <GridPane.margin>
-                        <Insets left="105.0" />
-                     </GridPane.margin>
-                  </CheckBox>
-                  <CheckBox fx:id="weekendBox" mnemonicParsing="false" text="Weekend" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                     <GridPane.margin>
-                        <Insets left="200.0" />
-                     </GridPane.margin>
-                  </CheckBox>
+                  <Label fx:id="batchName" prefHeight="25.0" prefWidth="337.0" GridPane.columnIndex="1" />
+                  <Label fx:id="facultyId" prefHeight="29.0" prefWidth="320.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label fx:id="timeChoice" prefHeight="28.0" prefWidth="323.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label prefHeight="31.0" prefWidth="397.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
                <padding>
                   <Insets bottom="5.0" top="5.0" />
