--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -112,14 +113,12 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="courseInterestedIn" layoutX="233.0" layoutY="513.0" onAction="#validateCourseInterestedIn" />
                         <Label layoutX="43.0" layoutY="609.0" prefHeight="23.0" prefWidth="167.0" text="Available Time">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Label>
                         <ChoiceBox fx:id="availableTime" layoutX="233.0" layoutY="607.0" onDragDetected="#validateAvailableTime" prefHeight="25.0" prefWidth="156.0" />
-                        <TextField fx:id="courseAlreadyDone" layoutX="233.0" layoutY="578.0" onAction="#validatecourseAlreadyDone" />
                         <Label layoutX="46.0" layoutY="638.0" prefHeight="23.0" prefWidth="148.0" text="Reference :">
                            <font>
                               <Font size="18.0" />
@@ -216,6 +215,8 @@
                         <TextField fx:id="recommendation" layoutX="233.0" layoutY="691.0" onAction="#validateRecommendation" prefHeight="28.0" prefWidth="161.0" />
                         <CheckBox fx:id="eligible" layoutX="234.0" layoutY="552.0" mnemonicParsing="false" onAction="#validateEligible" text="Eligible" />
                         <CheckBox fx:id="active" layoutX="237.0" layoutY="824.0" mnemonicParsing="false" onAction="#validateActive" text="Active" />
+                        <ComboBox fx:id="coursesInterestedIn" layoutX="236.0" layoutY="513.0" prefHeight="27.0" prefWidth="159.0" />
+                        <ComboBox fx:id="coursesAlreadyDone" layoutX="233.0" layoutY="578.0" prefHeight="27.0" prefWidth="168.0" />
                      </children>
                   </AnchorPane>
               </content>
