--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -150,7 +149,7 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="42.0" layoutY="457.0" prefHeight="23.0" prefWidth="192.0" text="Experiance ">
+                        <Label layoutX="42.0" layoutY="457.0" prefHeight="23.0" prefWidth="192.0" text="Experience ">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -175,7 +174,7 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label layoutX="41.0" layoutY="580.0" prefHeight="23.0" prefWidth="186.0" text="Course Already Done :">
+                        <Label layoutX="41.0" layoutY="580.0" prefHeight="23.0" prefWidth="186.0" text="Courses Already Done :">
                            <font>
                               <Font size="18.0" />
                            </font>
@@ -215,8 +214,8 @@
                         <TextField fx:id="recommendation" layoutX="233.0" layoutY="691.0" onAction="#validateRecommendation" prefHeight="28.0" prefWidth="161.0" />
                         <CheckBox fx:id="eligible" layoutX="234.0" layoutY="552.0" mnemonicParsing="false" onAction="#validateEligible" text="Eligible" />
                         <CheckBox fx:id="active" layoutX="237.0" layoutY="824.0" mnemonicParsing="false" onAction="#validateActive" text="Active" />
-                        <ComboBox fx:id="coursesInterestedIn" layoutX="236.0" layoutY="513.0" prefHeight="27.0" prefWidth="159.0" />
-                        <ComboBox fx:id="coursesAlreadyDone" layoutX="233.0" layoutY="578.0" prefHeight="27.0" prefWidth="168.0" />
+                        <HBox fx:id="coursesInterestedInHbox" layoutX="234.0" layoutY="516.0" prefHeight="33.0" prefWidth="162.0" />
+                        <HBox fx:id="courseAlreadyDoneHbox" layoutX="233.0" layoutY="575.0" prefHeight="28.0" prefWidth="162.0" />
                      </children>
                   </AnchorPane>
               </content>
