--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchFeedbackScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchFeedbackScreen.fxml
@@ -61,10 +61,10 @@
          <children>
             <BarChart fx:id="weightedResponsesGraph" prefHeight="519.0" prefWidth="574.0" style="-fx-background-color: purple;" title="Weighted Objective Responses" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <xAxis>
-                <CategoryAxis label="Questions" startMargin="0.0" tickLabelFill="WHITE" tickLabelGap="10.0" />
+                <CategoryAxis label="Questions" startMargin="0.0" tickLabelFill="WHITE" tickLabelGap="10.0" fx:id="xAxis" />
               </xAxis>
               <yAxis>
-                <NumberAxis autoRanging="false" label="Weignted Average" minorTickCount="0" minorTickLength="0.0" side="LEFT" tickLabelFill="WHITE" tickLabelGap="1.0" tickUnit="1.0" upperBound="5.0" />
+                <NumberAxis fx:id="yAxis" autoRanging="false" label="Weignted Average" minorTickCount="0" minorTickLength="0.0" side="LEFT" tickLabelFill="WHITE" tickLabelGap="1.0" tickUnit="1.0" upperBound="5.0" />
               </yAxis>
             </BarChart>
          </children>
