--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
@@ -193,7 +193,6 @@
                         <ChoiceBox fx:id="segmentType" layoutX="230.0" layoutY="748.0" onDragDetected="#validateSegmentType" prefHeight="28.0" prefWidth="150.0" />
                         <TextField fx:id="role" layoutX="233.0" layoutY="426.0" onAction="#validateRole" />
                         <TextField fx:id="experience" layoutX="233.0" layoutY="454.0" onAction="#validateExperience" />
-                        <TextField fx:id="createdBy" layoutX="233.0" layoutY="482.0" onAction="#validateCreatedBy" prefHeight="31.0" prefWidth="161.0" />
                         <Label layoutX="41.0" layoutY="664.0" prefHeight="23.0" prefWidth="189.0" text="Date Of Enquiry :">
                            <font>
                               <Font size="18.0" />
@@ -216,6 +215,7 @@
                         <CheckBox fx:id="active" layoutX="237.0" layoutY="824.0" mnemonicParsing="false" onAction="#validateActive" text="Active" />
                         <HBox fx:id="coursesInterestedInHbox" layoutX="234.0" layoutY="516.0" prefHeight="33.0" prefWidth="162.0" />
                         <HBox fx:id="courseAlreadyDoneHbox" layoutX="233.0" layoutY="575.0" prefHeight="28.0" prefWidth="162.0" />
+                        <ChoiceBox fx:id="createdBy" layoutX="233.0" layoutY="483.0" prefHeight="24.0" prefWidth="168.0" />
                      </children>
                   </AnchorPane>
               </content>
