--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/AttendanceScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/AttendanceScreen.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -96,23 +95,15 @@
                               <Insets top="5.0" />
                            </padding>
                         </HBox>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" pannable="true" VBox.vgrow="ALWAYS">
-                          <content>
-                            <AnchorPane>
-                                 <children>
-                                    <TableView fx:id="updateAttendanceRecordTable" editable="true" minHeight="400.0" minWidth="300.0" prefHeight="437.0" prefWidth="424.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columns>
-                                        <TableColumn fx:id="updateAttendanceRecordTableStudentColumn" prefWidth="75.0" text="Students" />
-                                        <TableColumn fx:id="updateAttendanceRecordTableAttendanceColumn" prefWidth="75.0" text="Attendance" />
-                                      </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                        </ScrollPane>
+                        <TableView fx:id="updateAttendanceRecordTable" editable="true" minHeight="400.0" minWidth="300.0" prefHeight="437.0" prefWidth="424.0" VBox.vgrow="ALWAYS">
+                          <columns>
+                            <TableColumn fx:id="updateAttendanceRecordTableStudentColumn" editable="false" prefWidth="75.0" text="Students" />
+                            <TableColumn fx:id="updateAttendanceRecordTableAttendanceColumn" prefWidth="75.0" text="Attendance" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
                         <Button fx:id="saveAttendance" maxHeight="-Infinity" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" onAction="#saveAttendance" prefHeight="50.0" prefWidth="150.0" text="Save">
                            <cursor>
                               <Cursor fx:constant="HAND" />
@@ -126,26 +117,15 @@
             </AnchorPane>
           <AnchorPane minHeight="200.0" minWidth="100.0" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="620.0" prefWidth="531.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <content>
-                      <AnchorPane>
-                           <children>
-                              <TableView fx:id="displayStudentAttendanceTable" prefHeight="1313.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <columns>
-                                  <TableColumn fx:id="displayStudentAttendanceTableName" minWidth="20.0" prefWidth="100.0" text="Name" />
-                                  <TableColumn fx:id="displayStudentAttendanceTableLecture1" minWidth="20.0" prefWidth="100.0" text="Lecture1" />
-                                </columns>
-                                 <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                 </columnResizePolicy>
-                              </TableView>
-                           </children>
-                        </AnchorPane>
-                    </content>
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </ScrollPane>
+                  <TableView fx:id="displayStudentAttendanceTable" prefHeight="620.0" prefWidth="531.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="displayStudentAttendanceTableName" editable="false" minWidth="150.0" prefWidth="200.0" text="Name" />
+                      <TableColumn fx:id="displayStudentAttendanceTableLecture1" editable="false" minWidth="150.0" prefWidth="200.0" text="Lecture1" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
                </children>
             </AnchorPane>
         </items>
