--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
@@ -98,7 +98,7 @@
                     <content>
                       <AnchorPane minHeight="400.0" minWidth="900.0" prefHeight="456.0" prefWidth="955.0">
                            <children>
-                              <GridPane fx:id="gridPane" alignment="CENTER" focusTraversable="true" minHeight="400.0" minWidth="900.0" prefHeight="516.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <GridPane fx:id="gridPane" alignment="CENTER" focusTraversable="true" hgap="5.0" minHeight="400.0" minWidth="900.0" prefHeight="516.0" prefWidth="960.0" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
