--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EvaluationScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EvaluationScreen.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -64,9 +63,9 @@
       </AnchorPane>
    </top>
    <center>
-      <SplitPane dividerPositions="0.40380761523046094" minHeight="400.0" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.40380761523046094" minHeight="400.0" prefHeight="160.0" prefWidth="200.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
         <items>
-          <AnchorPane maxWidth="600.0" minHeight="400.0" minWidth="400.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: white;">
+          <AnchorPane minWidth="400.0" style="-fx-background-color: purple;">
                <children>
                   <GridPane hgap="5.0" prefHeight="623.0" prefWidth="214.0" style="-fx-background-color: purple;" vgap="5.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
@@ -124,39 +123,28 @@
                      </padding>
                   </GridPane>
                </children>
-               <padding>
-                  <Insets bottom="5.0" left="5.0" />
-               </padding>
             </AnchorPane>
-          <AnchorPane minHeight="400.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: white;">
+          <AnchorPane minWidth="580.0" style="-fx-background-color: purple;">
                <children>
-                  <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="623.0" prefWidth="592.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <content>
-                      <AnchorPane>
-                           <children>
-                              <TableView fx:id="evaluationTable" maxHeight="1800.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="608.0" prefWidth="577.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <columns>
-                                  <TableColumn fx:id="evaluationTableNameColumn" minWidth="150.0" prefWidth="200.0" text="Name" />
-                                    <TableColumn fx:id="evaluationTableGradeColumn" minWidth="150.0" prefWidth="200.0" text="Grade" />
-                                    <TableColumn fx:id="evaluationTableCertificateIssuedColumn" minWidth="150.0" prefWidth="200.0" text="Certificate Issued" />
-                                </columns>
-                                 <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                 </columnResizePolicy>
-                              </TableView>
-                           </children>
-                        </AnchorPane>
-                    </content>
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                  </ScrollPane>
+                  <TableView fx:id="evaluationTable" layoutX="35.0" maxHeight="1800.0" prefHeight="615.0" prefWidth="584.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <columns>
+                      <TableColumn fx:id="evaluationTableNameColumn" editable="false" minWidth="150.0" prefWidth="200.0" text="Name" />
+                        <TableColumn fx:id="evaluationTableGradeColumn" editable="false" minWidth="150.0" prefWidth="200.0" text="Grade" />
+                        <TableColumn fx:id="evaluationTableCertificateIssuedColumn" editable="false" minWidth="150.0" prefWidth="200.0" text="Certificate Issued" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
                </children>
                <padding>
-                  <Insets bottom="5.0" right="5.0" />
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </padding>
             </AnchorPane>
         </items>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
       </SplitPane>
    </center>
 </BorderPane>
