--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/ProgressTrackingScreen.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -157,23 +156,18 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                      <children>
-                        <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="500.0" minHeight="-Infinity" prefHeight="300.0" prefWidth="560.0" VBox.vgrow="ALWAYS">
-                          <content>
-                            <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="297.0" prefWidth="560.0">
-                                 <children>
-                                    <TableView fx:id="topicsTable" minWidth="200.0" prefHeight="297.0" prefWidth="560.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                      <columns>
-                                        <TableColumn fx:id="topicsTableTopicNameColumn" minWidth="100.0" prefWidth="200.0" text="Topic Name" />
-                                        <TableColumn fx:id="topicsTableTopicDurationColumn" minWidth="100.0" prefWidth="200.0" text="Duration" />
-                                      </columns>
-                                       <columnResizePolicy>
-                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                       </columnResizePolicy>
-                                    </TableView>
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                        </ScrollPane>
+                        <TableView fx:id="topicsTable" minWidth="200.0" prefHeight="298.0" prefWidth="497.0" VBox.vgrow="ALWAYS">
+                          <columns>
+                            <TableColumn fx:id="topicsTableTopicNameColumn" minWidth="100.0" prefWidth="200.0" text="Topic Name" />
+                            <TableColumn fx:id="topicsTableTopicDurationColumn" minWidth="100.0" prefWidth="200.0" text="Duration" />
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                        </TableView>
                         <PieChart fx:id="processTrackingPieChart" minHeight="-Infinity" minWidth="-Infinity" prefHeight="295.0" prefWidth="499.0" title="Syllabus" VBox.vgrow="ALWAYS">
                            <effect>
                               <ColorAdjust brightness="0.02" contrast="0.25" />
