--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/BatchSelectionScreen.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.BatchSelectionScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.BatchSelectionScreenController">
    <top>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="75.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="TOP_LEFT">
          <children>
@@ -25,9 +25,9 @@
                <children>
                   <HBox prefHeight="70.0" prefWidth="1000.0" spacing="5.0" style="-fx-background-color: purple;">
                      <children>
-                        <Button fx:id="backButton" mnemonicParsing="false" onAction="#getPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
+                        <Button fx:id="backButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
                            <font>
-                              <Font name="Calibri Bold" size="14.0" />
+                              <Font name="Calibri Bold Italic" size="12.0" />
                            </font>
                            <HBox.margin>
                               <Insets />
@@ -51,7 +51,7 @@
                               <Image url="@../../../../../Desktop/JAVAproj/Batch%20Tracker%20Layout%20files/Logo.jpeg" />
                            </image>
                            <HBox.margin>
-                              <Insets top="3.0" />
+                              <Insets />
                            </HBox.margin></ImageView>
                      </children>
                      <padding>
