--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EditBatchDetailsScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/EditBatchDetailsScreen.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.EditBatchDetailsScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.EditBatchDetailsScreenController">
    <top>
       <AnchorPane prefHeight="60.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
          <children>
@@ -32,7 +32,7 @@
                <children>
                   <Button fx:id="backButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#goToPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
                      <font>
-                        <Font name="Calibri Bold" size="14.0" />
+                        <Font name="Calibri Bold Italic" size="12.0" />
                      </font>
                      <cursor>
                         <Cursor fx:constant="HAND" />
@@ -42,7 +42,7 @@
                         <Font name="Calibri Bold Italic" size="18.0" />
                      </font>
                      <HBox.margin>
-                        <Insets top="15.0" />
+                        <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
                      </HBox.margin>
                   </Text>
                   <Region prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
