--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/FeeRecordsScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/FeeRecordsScreen.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.FeeRecordsScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="400.0" minWidth="200.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.FeeRecordsScreenController">
    <top>
       <AnchorPane prefHeight="80.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER_LEFT">
          <children>
@@ -28,7 +28,7 @@
                <children>
                   <Button fx:id="backButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
                      <font>
-                        <Font name="Calibri Bold" size="14.0" />
+                        <Font name="Calibri Bold Italic" size="12.0" />
                      </font>
                      <HBox.margin>
                         <Insets />
@@ -42,7 +42,7 @@
                         <Font name="Calibri Bold Italic" size="18.0" />
                      </font>
                      <HBox.margin>
-                        <Insets top="15.0" />
+                        <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
                      </HBox.margin>
                   </Text>
                   <Region prefHeight="68.0" prefWidth="302.0" HBox.hgrow="ALWAYS" />
@@ -60,7 +60,7 @@
                         <Image url="@../../../../../Downloads/Winpoint%20Logo.jpeg" />
                      </image>
                      <HBox.margin>
-                        <Insets top="3.0" />
+                        <Insets />
                      </HBox.margin>
                   </ImageView>
                </children>
