--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/LectureScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/LectureScreen.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="700.0" minWidth="100.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.LectureScreenController">
+<BorderPane maxHeight="1080.0" maxWidth="1920.0" minHeight="700.0" minWidth="100.0" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.winpoint.batchTracker.fxmlsControllers.LectureScreenController">
    <top>
       <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="1000.0" style="-fx-background-color: white;" BorderPane.alignment="TOP_LEFT">
          <children>
@@ -24,7 +24,7 @@
                <children>
                   <HBox prefHeight="60.0" prefWidth="1000.0" spacing="5.0">
                      <children>
-                        <Button fx:id="backButton" mnemonicParsing="false" onAction="#getPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
+                        <Button fx:id="backButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
                            <font>
                               <Font name="Calibri Bold Italic" size="12.0" />
                            </font>
@@ -37,7 +37,7 @@
                         </Button>
                         <Text fx:id="batchName" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Batch Name">
                            <font>
-                              <Font name="Calibri Bold" size="18.0" />
+                              <Font name="Calibri Bold Italic" size="18.0" />
                            </font>
                            <HBox.margin>
                               <Insets bottom="20.0" left="10.0" right="20.0" top="20.0" />
