Attendance Display Updated
Student Attendance.
Fetch Batch Details for a given batchId.

--- a/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/AssignmentRecordsScreen.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchTracker/fxmls/AssignmentRecordsScreen.fxml
@@ -20,7 +20,7 @@
          <children>
             <HBox prefHeight="70.0" prefWidth="1000.0" spacing="5.0" style="-fx-background-color: purple;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Button fx:id="back" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#GoToPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
+                  <Button fx:id="backButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getPreviousScreen" prefHeight="50.0" prefWidth="50.0" text="Back">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
