Changes in Priority List and Number Of students are done.

--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchLauncher.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/BatchLauncher.fxml
@@ -42,7 +42,7 @@
                      <padding>
                         <Insets left="10.0" />
                      </padding></Label>
-                  <Label text="Lecture Duration" GridPane.rowIndex="1">
+                  <Label text="Lecture Duration ( minutes)" GridPane.rowIndex="1">
                      <padding>
                         <Insets left="10.0" />
                      </padding></Label>
