--- a/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
+++ b/WinPointManagementSystem/src/com/winpoint/batchScheduler/fxmls/SignUpForm.fxml
@@ -117,7 +117,6 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <ChoiceBox fx:id="availableTime" layoutX="233.0" layoutY="607.0" onDragDetected="#validateAvailableTime" prefHeight="25.0" prefWidth="156.0" />
                         <Label layoutX="46.0" layoutY="638.0" prefHeight="23.0" prefWidth="148.0" text="Reference :">
                            <font>
                               <Font size="18.0" />
@@ -216,6 +215,7 @@
                         <HBox fx:id="coursesInterestedInHbox" layoutX="234.0" layoutY="516.0" prefHeight="33.0" prefWidth="162.0" />
                         <HBox fx:id="courseAlreadyDoneHbox" layoutX="233.0" layoutY="575.0" prefHeight="28.0" prefWidth="162.0" />
                         <ChoiceBox fx:id="createdBy" layoutX="233.0" layoutY="483.0" prefHeight="24.0" prefWidth="168.0" />
+                        <HBox fx:id="availableTimeHBox" layoutX="234.0" layoutY="607.0" prefHeight="27.0" prefWidth="162.0" />
                      </children>
                   </AnchorPane>
               </content>
